--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Cogigo html para registrar ip y redigir a otra pagina -->
+<!-- Codigo html para registrar ip y redigir a otra pagina -->
 <!--  -->
 <html>
 <head>
