--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- Codigo html para registrar ip y redigir a otra pagina -->
-<!--  -->
+<!-- Codigo index.html para registrar IP visita y redigir a otra pagina -->
+<!-- Subir fichero a la carpeta del Apache Server /var/www/html/ ..  -->
 <html>
 <head>
 <title>(c) hackingyseguridad.com 2019</title>
