--- a/index2.html
+++ b/index2.html
@@ -2,21 +2,17 @@
 <!-- Subir fichero a la carpeta del Apache Server /var/www/html/ ..  -->
 
 <html>
-   <head>
-    <meta property="og:image" itemprop="image" content="http://t.hackingyseguridad.com/gatito.gif">
-    <link itemprop="thumbnailUrl" href="http://t.hackingyseguridad.com/gatito.gif">
-    <meta property="og:image" content="http://t.hackingyseguridad.com/gatito.gif">
-    <meta property="og:image:type" content="image/gif">
-    <meta property="og:updated_time" content="updatedtime">
-    <meta property="og:locale" content="es_ES" />
-    </head>
+<head>
+<meta property="og:title" content="Buenos días!!!" />
+<meta property="og:image" content="http://t.hackingyseguridad.com/gatito.gif">
+<meta property="og:image:type" content="image/gif">
+<meta property="og:updated_time" content="updatedtime">
+<meta property="og:locale" content="es_ES" />
+</head>
 
-    <body>
-
- <body style="background-color:#121212">
-    <article class="media">
-
-        <img src="http://t.hackingyseguridad.com/gatito.gif" alt=""
+<body style="background-color:#121212">
+<article class="media">
+<img src="http://t.hackingyseguridad.com/gatito.gif" alt=""
             style="position:absolute;left:50%;top:50%;width:480px;-webkit-transform:translate(-50%,-50%);-moz-transform:translate(-50%,-50%);transform:translate(-50%,-50%);" />
 </body>
 </html>
