--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,7 @@
 <meta property="og:locale" content="es_ES" />
 </head>
 
-<body style="background-color:#121212">
-<article class="media">
-<img src="http://t.hackingyseguridad.com/gatito.gif" alt=""
-            style="position:absolute;left:50%;top:50%;width:480px;-webkit-transform:translate(-50%,-50%);-moz-transform:translate(-50%,-50%);transform:translate(-50%,-50%);" />
+<body>
+<img src="http://t.hackingyseguridad.com/gatito.gif" />
 </body>
 </html>
