--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <!-- Subir fichero a la carpeta del Apache Server /var/www/html/ ..  -->
 <html>
 <head>
-<title>(c) hackingyseguridad.com 2019</title>
-<META HTTP-EQUIV="REFRESH" CONTENT="1;URL=http://www.hackingyseguridad.com">
-</head>
+<meta property="og:title" content="Buenos días!!!" />
+<meta property="og:image" content="http://t.hackingyseguridad.com/gatito.gif">
+<meta property="og:image:type" content="image/gif">
+<meta property="og:updated_time" content="updatedtime">
+<meta property="og:locale" content="es_ES" />
+<META HTTP-EQUIV="REFRESH" CONTENT="1;URL=http://t.hackingyseguridad.com">
+ </head>
 <body>
-Registra en el log de apache la IP origen y redirige automaticamente a www.hackingyseguridad.com
+<img src="http://t.hackingyseguridad.com/gatito.gif" />
 </body>
 </html>
