--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 <head>
 <meta property="og:title" content="Buenos días!!!" />
 <meta property="og:image" content="http://t.hackingyseguridad.com/gatito.png">
-<meta property="og:image:type" content="image/png">
+<meta property="og:image:type" content="image/gif">
 <meta property="og:updated_time" content="updatedtime">
 <meta property="og:locale" content="es_ES" />
 </head>
