--- a/index2.html
+++ b/index2.html
@@ -1,16 +1,52 @@
-<!-- Codigo index2.html para capturar IP y reproducir GIF residenden te nuestro server  -->
+<!-- Codigo index2.html para capturar IP y reproducir GIF residente en nuestro server  -->
 <!-- Subir fichero a la carpeta del Apache Server /var/www/html/ ..  -->
 
-<html>
-<head>
-<meta property="og:title" content="Buenos días!!!" />
-<meta property="og:image" content="http://t.hackingyseguridad.com/gatito.png">
-<meta property="og:image:type" content="image/gif">
-<meta property="og:updated_time" content="updatedtime">
-<meta property="og:locale" content="es_ES" />
-</head>
+<!DOCTYPE html>
 
-<body>
-<img src="http://t.hackingyseguridad.com/gatito.gif" />
-</body>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Buenos días!!!</title>
+        <meta name="description" content="">
+        <link rel="icon" type="/image/png" href="/img/favicon.png"/>
+
+
+        <link rel="canonical" href="http://t.hackingyseguridad.com"/>
+
+
+        <meta name="description" content=""/>
+        <meta name="author" content="hackingyseguridad.com"/>
+        <meta name="keywords" content="imagenes, hd, whatsapp, amor, animados, para, GIF, Animated GIF">
+
+        <meta property="og:url" content="http://t.hackingyseguridad.com/gatito.gif">
+        <meta property="og:title" content="Buenos dias!!!">
+        <meta property="og:description" content="">
+        <meta property="og:type" content="video.other">
+        <meta property="og:image" content="http://t.hackingyseguridad.com/gatito.jpg">
+        <meta property="og:locale" content="es_ES" />
+
+        <meta name="twitter:card" value="player">
+        <meta name="twitter:title" value="Buenos dias!!!">
+        <meta name="twitter:description" value="">
+        <meta name="twitter:image" value="http://t.hackingyseguridad.com/gatito.jpg">
+        <meta name="twitter:site" value="@hackyseguridad">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+
+        <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
+    </head>
+    <body style="margin:0;padding:0;">
+
+            <video
+                id="gif-mp4"
+                poster="http://t.hackingyseguridad.com/gatito.gif"
+                style="margin:0;padding:0"
+                width="365"
+                height="205"
+                autoplay
+                loop>
+                <source src="http://t.hackingyseguridad.com/gatito.git"</source>
+                <img src="http://t.hackingyseguridad.com/gatito.git" title="Your browser does not support the mp4 video codec." />
+            </video>
+    </body>
 </html>
+
